# price-action

./: .gitignore  API_404_FIXES_SUMMARY.md  API_CONNECTIVITY_FIXES_SUMMARY.md  AUTOMATED_TESTING_PIPELINE.md  CLEANUP_SUMMARY.md  CORS_SOLUTION_DOCUMENTATION.md  CROSS_PLATFORM_TESTING_README.md  DEBUGGING_SUMMARY.md  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_GUIDE.md  LOAD_STRESS_TESTING_IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_TESTING_IMPLEMENTATION_SUMMARY.md  PLATFORM_COMPARISON.md  README.md  TASK12_PERFORMANCE_MONITORING_IMPLEMENTATION_SUMMARY.md  TASK41_IMPLEMENTATION_SUMMARY.md  TASK42_IMPLEMENTATION_SUMMARY.md  TASK4_INTEGRATION_TESTING_SUMMARY.md  TESTING_INFRASTRUCTURE_SUMMARY.md  automated-testing-config.json  comprehensive_test_runner.py  cors_fix_verification_report.md  execute_comprehensive_testing.py  frontend_test_data.json  improvement_plan_generator.py  integration-test-config.json  load-stress-test-config.json  pdf_processing_test_report.md  performance-baseline.json  performance-test-config.json  run_error_handling_tests.py  run_performance_tests.py  simple_performance_test.py  test.md  test.txt  test_api_fixes.py  test_data_setup.py  test_frontend_integration.py  test_load_framework.py  (+8 more)
backend/: .env.example  .pre-commit-config.yaml  BUG_TRACKING_README.md  DATABASE.md  Dockerfile  IMPROVEMENT_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  SECURE_FILE_UPLOAD_IMPLEMENTATION.md  SECURITY_TESTING_IMPLEMENTATION_SUMMARY.md  TASK10_IMPLEMENTATION_SUMMARY.md  TASK10_STATUS_TRACKING_IMPLEMENTATION.md  TASK11_IMPLEMENTATION_SUMMARY.md  TASK12_COMPLETION_SUMMARY.md  TASK12_IMPLEMENTATION_SUMMARY.md  TASK12_KNOWLEDGE_EXTRACTION_INTEGRATION_SUMMARY.md  TASK13_IMPLEMENTATION_SUMMARY.md  TASK14_IMPLEMENTATION_SUMMARY.md  TASK15_IMPLEMENTATION_SUMMARY.md  TASK16_IMPLEMENTATION_SUMMARY.md  TASK17_IMPLEMENTATION_SUMMARY.md  TASK18_IMPLEMENTATION_SUMMARY.md  TASK19_IMPLEMENTATION_SUMMARY.md  TASK26_IMPLEMENTATION_SUMMARY.md  TASK27_IMPLEMENTATION_SUMMARY.md  TASK4_IMPLEMENTATION_SUMMARY.md  TASK5_IMPLEMENTATION_SUMMARY.md  TASK8_IMPLEMENTATION_SUMMARY.md  UNIT_TESTING_SUMMARY.md  __init__.py  alembic.ini  bug_tracking_cli.py  bug_tracking_example.py  comprehensive_test_results.json  document_learning.db  implemented_fixes.json  improved_pdf_processor.py  improvement_plan.json  main.py  performance_monitoring_example.py  (+101 more)
backend/alembic/: env.py
backend/app/: __init__.py
backend/bug_reproduction/: scripts.json
backend/bug_tracking/: issues.json  regression_test_e9ab8a5e-e510-48d0-9ea3-a1c7739f04c4.py
backend/migrations/: create_cards_table.sql
backend/tests/: conftest.py  factories.py  test_api_endpoints_unit.py  test_bug_tracking.py  test_card_generation.py  test_card_generation_unit.py  test_chapter_db_service.py  test_chapter_extraction.py  test_comprehensive_unit.py  test_deduplication.py  test_document_upload.py  test_embedding_service.py  test_entity_extraction.py  test_export_service.py  test_figure_service.py  test_image_caption_service.py  test_knowledge_extraction.py  test_main.py  test_models.py  test_nlp_pipeline.py  test_parsers.py  test_performance_monitoring_system.py  test_privacy_security.py  test_production_readiness.py  test_review_service.py  test_search_service.py  test_search_unit.py  test_srs_service.py  test_storage.py  test_text_segmentation.py  test_user_acceptance.py
(+495 files in other folders)
